eks_devops/eks_terraform/9_security_group.tf
# Creating security group for bastion host
resource "aws_security_group" "bastion_host" {
  name        = var.bastion_security_group_name
  description = "Allow SSH reated By Terraform"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
